<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/fullscreen_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:keepScreenOn="true"
      android:text="@string/dummy_content"
      android:textColor="#33b5e5"
      android:textSize="50sp"
      android:textStyle="bold"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="256dp"
      android:layout_gravity="center_horizontal|bottom">

    <com.gelitenight.waveview.library.WaveView
        android:id="@+id/wave2"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textLifeP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/twenty_life"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="64dp"/>

    <!--TextView
        android:id="@+id/textMinus5P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textLifeP2"
        android:layout_toLeftOf="@+id/textLifeP2"
        android:layout_toStartOf="@+id/textLifeP2"
        android:text="@string/minus5"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/textPlus5P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textLifeP2"
        android:layout_toEndOf="@+id/textLifeP2"
        android:layout_toRightOf="@+id/textLifeP2"
        android:text="@string/plus5"
        android:textAppearance="?android:attr/textAppearanceLarge"/-->

    <TextView
        android:id="@+id/textMinus1P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textLifeP2"
        android:layout_toStartOf="@+id/textLifeP2"
        android:padding="12dp"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/minus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="56dp"/>

    <TextView
        android:id="@+id/textPlus1P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textLifeP2"
        android:layout_toRightOf="@+id/textLifeP2"
        android:padding="12dp"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/plus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="56dp"/>

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="256dp"
      android:layout_gravity="center_horizontal|top">

    <com.gelitenight.waveview.library.WaveView
        android:id="@+id/wave1"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:rotation="180"/>

    <TextView
        android:id="@+id/textLifeP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:rotation="180"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/twenty_life"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="64dp"/>

    <TextView
        android:id="@+id/textMinus1P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textLifeP1"
        android:layout_toRightOf="@+id/textLifeP1"
        android:padding="12dp"
        android:rotation="180"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/minus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="56dp"/>

    <TextView
        android:id="@+id/textPlus1P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textLifeP1"
        android:layout_toStartOf="@+id/textLifeP1"
        android:padding="12dp"
        android:rotation="180"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/plus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="56dp"/>

  </RelativeLayout>

  <com.github.clans.fab.FloatingActionMenu
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|right"
      android:layout_marginBottom="@dimen/fab_margin"
      android:layout_marginRight="@dimen/fab_margin"
      app:menu_colorNormal="#ffa44a"
      app:menu_colorPressed="#c7c7c7"
      app:menu_icon="@drawable/ic_action_settings"
      app:menu_labels_style="@style/fab_labels_style">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_roll"
        app:fab_colorNormal="#fff"
        app:fab_colorPressed="#aebabf"
        app:fab_label="@string/menu_roll"
        app:fab_size="mini"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_life"
        app:fab_colorNormal="#fff"
        app:fab_colorPressed="#aebabf"
        app:fab_label="@string/menu_life"
        app:fab_size="mini"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabMana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_mana"
        app:fab_colorNormal="#fff"
        app:fab_colorPressed="#aebabf"
        app:fab_label="@string/menu_mana_color"
        app:fab_size="mini"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabPoison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_poison"
        app:fab_colorNormal="#fff"
        app:fab_colorPressed="#aebabf"
        app:fab_label="@string/menu_poison"
        app:fab_size="mini"/>

  </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>
